# gpu-ai-hub

./: .dockerignore  .env.example  .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  NOTICE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  compose.nvidia.yaml  compose.yaml  install-user-service.sh  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: ci.yml
caddy/: Caddyfile
config/: comfyui.json  models.json  services.json
docs/: ARCHITECTURE.md  PUBLIC_RELEASE.md  RELEASE_CHECKLIST.md
hub/: __init__.py  app.py  db.py  discovery.py  hardware.py  mdns.py  providers.py  scheduler.py  settings.py  worker.py
landing-page/: index.html
locales/: de.json  en.json  es.json  fr.json
scripts/: doctor.ps1  doctor.sh  install-comfyui-native.sh  install-comfyui-nodes.sh  install.ps1  install.sh  public-audit.sh  pull-comfy-models.ps1  pull-comfy-models.sh  pull-models.ps1  pull-models.sh
src/: audio_portal.py  auto_portal.py  avatar_portal.py  coder_portal.py  docs_portal.py  gallery_portal.py  gpu_orchestrator.py  prompt_portal.py  sync_nav.py  system_portal.py  tts_portal.py  vibe_portal.py  video_portal.py  vision_portal.py
systemd/: audio-portal.service  auto-portal.service  coder-portal.service  docs-portal.service  gallery-portal.service  gpu-orchestrator.service  prompt-portal.service  system-portal.service  tts-portal.service  video-portal.service  vision-portal.service  zen-hub.service
tests/: test_config.py  test_core.py
(+12 files in other folders)
